--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
-DOCKER_JUPYTER_IMAGE=quay.io/jupyter/base-notebook
+DOCKER_JUPYTER_IMAGE=jupyterlab-with-extensions
 DOCKER_NETWORK_NAME=jupyter-integration
 DOCKER_NOTEBOOK_DIR=/home/jovyan/work
+SERVER_API_TOKEN=812a587d-8c23-4a60-873e-713c87084076
+JUPYTER_URL=http://jupyter_hub:8000
