--- a/.env
+++ b/.env
@@ -2,4 +2,6 @@ DOCKER_JUPYTER_IMAGE=jupyterlab-with-extensions
 DOCKER_NETWORK_NAME=jupyter-integration
 DOCKER_NOTEBOOK_DIR=/home/jovyan/work
 SERVER_API_TOKEN=812a587d-8c23-4a60-873e-713c87084076
-JUPYTER_URL=http://jupyter_hub:8000
+JUPYTER_URL=http://tcarzverey.ru:8000
+DATASET_SERVICE_URL=http://tcarzverey.ru:8084/api/v1
+AUTH_SERVICE_URL=http://tcarzverey.ru:8082/api/v1
