--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3'
 services:
   jupyterhub:
     build: jupyterhub
-    container_name: jupyter_hub
+    container_name: jupyter-hub
     ports:
       - "8000:8000"
     volumes:
@@ -19,6 +19,8 @@ services:
     ports:
       - "5000:5000"
     env_file: .env
+    networks:
+      - ${DOCKER_NETWORK_NAME}
 
 
 networks:
