--- a/integration-server/Dockerfile
+++ b/integration-server/Dockerfile
@@ -2,8 +2,10 @@ FROM python:3.12
 
 WORKDIR /code
 
-COPY . /code
+ADD ./requirements.txt /code/requirements.txt
 
-RUN pip install --no-cache-dir --upgrade -r /code/requirements.txt
+RUN pip install -r /code/requirements.txt
+
+COPY . /code
 
 CMD ["python", "main.py"]
